styles/typography.scss
@use "tokens";
@use "breakpoints";

h2 {
  font-family: tokens.$archivo;
  font-size: 44px;
  font-weight: 400;
  line-height: 48px;
  font-weight: 700;
  color: map-get(tokens.$colors, "primary", "medium");
  margin: 0;

  @include breakpoints.sm {
    font-size: 28px;
    line-height: 36px;
  }
}

h3 {
  font-family: tokens.$archivo;
  font-size: 2em;
  font-weight: 400;
  line-height: 130%;
  color: map-get(tokens.$colors, "primary", "medium");
  margin: 0;

  @include breakpoints.sm {
    font-size: 1.5em;
  }
}

h4 {
  font-family: tokens.$archivo;
  font-size: 20px;
  font-weight: 400;
  line-height: 28px;
  color: map-get(tokens.$colors, "primary", "medium");
  margin: 0;
}

h6 {
  font-family: tokens.$space-mono;
  font-size: 20px;
  color: map-get(tokens.$colors, "neutral", "medium");
  text-transform: uppercase;
  margin: 0;
  font-weight: 400;
}

p {
  font-family: tokens.$archivo;
  font-size: 20px;
  font-weight: 400;
  line-height: 30px;
  color: map-get(tokens.$colors, "primary", "light");
  margin: 0;

  span.category {
    font-family: tokens.$space-mono;
    font-size: 20px;
    color: map-get(tokens.$colors, "neutral", "dark");
    text-transform: uppercase;
    margin: 0;
    font-weight: 400;
  }
}

strong {
  font-weight: 700;
}

